--- a/assets/postcss/style.css
+++ b/assets/postcss/style.css
@@ -59,6 +59,7 @@
 @import "pages/_swiper-slider.css";
 @import "pages/_stack.css";
 @import "pages/_steps.css";
+@import "pages/_switch.css";
 @import "pages/_swap.css";
 @import "pages/_toast.css";
 @import "pages/_todo-app.css";
