--- a/assets/pug/components/table/default-table.pug
+++ b/assets/pug/components/table/default-table.pug
@@ -14,4 +14,4 @@ table.table.equal-space
                 td(class="min-w-[11.125rem]")=bodyData.firstName
                 td(class="min-w-[11.125rem]")=bodyData.lastName
                 td(class="min-w-[11.125rem]")=bodyData.userId
-                td(class="min-w-[.625rem]")=bodyData.favoriteColor  
+                td(class="min-w-[.625rem]")=bodyData.position  
