--- a/assets/pug/data/tables.pug
+++ b/assets/pug/data/tables.pug
@@ -503,31 +503,31 @@
 -
     var DEFAULT_TABLE= 
         {
-            header:["No","First Name","Last Name","User Id","Color"],
+            header:["No","First Name","Last Name","User Id","Position"],
                 body:[
                 {
                     firstName:"Cy Ganderton",
                     lastName:"The Bird",
                     userId:"@mdorton",
-                    favoriteColor:"Blue",     
+                    position:"Accountant",     
                 },
                 {
                     firstName:"Marjy Ferencz",
                     lastName:"Ottandy",
                     userId:"@johndeo",
-                    favoriteColor:"Purple",    
+                    position:"Software Engineer",    
                 },
                 {
                     firstName:"Cy Ganderton",
                     lastName:"Orton",
                     userId:"@mdothe",
-                    favoriteColor:"Green",   
+                    position:"Pre-sale Support",   
                 },
                 {
                     firstName:"Cy Ganderton",
                     lastName:"Deo",
                     userId:"@Thornton",
-                    favoriteColor:"Red",
+                    position:"Senior Developer",
                 },
             ]    
         };
@@ -569,7 +569,7 @@
 -
     var ACTIVE_TABLE= 
         {
-            header:["","User Name","Status","Role","Salary","Start Date"],
+            header:["#","User Name","Status","Role","Salary","Start Date"],
                 body:[
                 {
                     userName:"Wiliand",
@@ -643,37 +643,37 @@
 -
     var COLORS_TABLE=
         {
-            header:["No","Customer","Date","Invoice","Website"],
+            header:["No","Employee Name","Date","Status","Performance"],
                 body:[
                 {
-                    customer:"Brian A. Lenz",
+                    employee:"Brian A. Lenz",
                     date:"Nov 21, 2021",
-                    invoice:"Blue",
-                    website:"Scoreboard.com", 
+                    status:"On leave",
+                    performance:"29/30", 
                 },     
                 {
-                    customer:"Maggie E. Pope",
+                    employee:"Maggie E. Pope",
                     date:"Nov 15, 2021",
-                    invoice:"Purple",
-                    website:"Miestate.com",    
+                    status:"Present",
+                    performance:"27/30",    
                 },
                 {
-                    customer:"Jarvis F. Knowles",
+                    employee:"Jarvis F. Knowles",
                     date:"Nov 1, 2021", 
-                    invoice:"green",  
-                    website:"Theclick.com",
+                    status:"On leave",  
+                    performance:"26/30",
                 },
                 {
-                    customer:"Jennifer D. Levine",
+                    employee:"Jennifer D. Levine",
                     date:"Nov 9, 2021",
-                    invoice:"Red",
-                    website:"Naturepp.com",
+                    status:"On leave",
+                    performance:"29/30",
                 },
                 {
-                    customer:"William C. Neilson",
+                    employee:"William C. Neilson",
                     date:"Nov 9, 2021",
-                    invoice:"Yellow",
-                    website:"Naturepp.com",
+                    status:"Present",
+                    performance:"28/30",
                 },
             ]    
         };
