--- a/html/template/table.html
+++ b/html/template/table.html
@@ -35,7 +35,7 @@
                     <use href="../../assets/svg/sprite.svg#Category"> </use>
                   </svg>
                 </button>
-                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden 4xl:text-base">Button</h1>
+                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden 4xl:text-base">Tables</h1>
               </div>
               <div class="right-header flex items-center flex-1 sm:gap-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] gap-[calc(16px_+_(20_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))]  justify-end">
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] 2xl:scale-0 2xl:opacity-0 2xl:invisible 2xl:px-body-space 2xl:max-w-full w-full 2xl:z-[5] flex-1 2xl:absolute 2xl:left-0">
@@ -720,7 +720,7 @@
                         <li class="px-2"> <span>/</span></li>
                         <li class="breadcrumb-items capitalize">Ui Kits</li>
                         <li class="px-2"> <span>/</span></li>
-                        <li class="breadcrumb-items capitalize active">Button</li>
+                        <li class="breadcrumb-items capitalize active">Tables</li>
                       </ol>
                     </nav>
                   </div>
@@ -1000,15 +1000,15 @@
             </nav>
           </aside>
         </div>
-        <!-- Sidebar End -->
-        <!-- Page Body Start -->
+        <!-- Sidebar End-->
+        <!-- Page Body Start-->
         <div class="page-body">
-          <div class="grid grid-cols-12 gap-card-gap">
+          <div class="grid grid-cols-12 gap-card-gap table-main">
             <div class="col-span-6 lg:col-span-12">
               <div class="card"> 
                 <div class="card-header border-b-0">
                   <div class="flex flex-col">
-                    <h3 class="text-lg font-medium">Default</h3>
+                    <h3 class="text-lg font-medium">Basic Table</h3>
                   </div>
                 </div>
                 <div class="card-body">
@@ -1020,7 +1020,7 @@
                           <th>First Name</th>
                           <th>Last Name</th>
                           <th>User Id</th>
-                          <th>Color</th>
+                          <th>Position</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -1029,28 +1029,28 @@
                           <td class="min-w-[11.125rem]">Cy Ganderton</td>
                           <td class="min-w-[11.125rem]">The Bird</td>
                           <td class="min-w-[11.125rem]">@mdorton</td>
-                          <td class="min-w-[.625rem]">Blue</td>
+                          <td class="min-w-[.625rem]">Accountant</td>
                         </tr>
                         <tr>
                           <td class="min-w-[1.25rem]">2</td>
                           <td class="min-w-[11.125rem]">Marjy Ferencz</td>
                           <td class="min-w-[11.125rem]">Ottandy</td>
                           <td class="min-w-[11.125rem]">@johndeo</td>
-                          <td class="min-w-[.625rem]">Purple</td>
+                          <td class="min-w-[.625rem]">Software Engineer</td>
                         </tr>
                         <tr>
                           <td class="min-w-[1.25rem]">3</td>
                           <td class="min-w-[11.125rem]">Cy Ganderton</td>
                           <td class="min-w-[11.125rem]">Orton</td>
                           <td class="min-w-[11.125rem]">@mdothe</td>
-                          <td class="min-w-[.625rem]">Green</td>
+                          <td class="min-w-[.625rem]">Pre-sale Support</td>
                         </tr>
                         <tr>
                           <td class="min-w-[1.25rem]">4</td>
                           <td class="min-w-[11.125rem]">Cy Ganderton</td>
                           <td class="min-w-[11.125rem]">Deo</td>
                           <td class="min-w-[11.125rem]">@Thornton</td>
-                          <td class="min-w-[.625rem]">Red</td>
+                          <td class="min-w-[.625rem]">Senior Developer</td>
                         </tr>
                       </tbody>
                     </table>
@@ -1067,17 +1067,10 @@
                 </div>
                 <div class="card-body"> 
                   <div class="overflow-auto custom-scroll">  
-                    <table class="table equal-space">
+                    <table class="table equal-space active-table">
                       <thead> 
                         <tr>
-                          <th>
-                            <div class="flex items-center gap-2">
-                              <label class="checkbox w-[15px] h-[15px]">
-                                <input type="checkbox peer">
-                                <div class="checkbox-indicator bg-white peer-checked:bg-primary"><i data-feather="check"></i></div>
-                              </label>
-                            </div>
-                          </th>
+                          <th>#</th>
                           <th>User Name</th>
                           <th>Status</th>
                           <th>Role</th>
@@ -1308,10 +1301,10 @@
                       <thead> 
                         <tr>
                           <th>No</th>
-                          <th>Customer</th>
+                          <th>Employee Name</th>
                           <th>Date</th>
-                          <th>Invoice</th>
-                          <th>Website</th>
+                          <th>Status</th>
+                          <th>Performance</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -1319,36 +1312,36 @@
                           <td class="min-w-[.625rem]">1</td>
                           <td class="min-w-[.625rem]">Brian A. Lenz</td>
                           <td class="min-w-[1.25rem]">Nov 21, 2021</td>
-                          <td class="min-w-[.625rem]">Blue</td>
-                          <td class="min-w-[.625rem]">Scoreboard.com</td>
+                          <td class="min-w-[.625rem]">On leave</td>
+                          <td class="min-w-[.625rem]">29/30</td>
                         </tr>
                         <tr>
                           <td class="min-w-[.625rem]">2</td>
                           <td class="min-w-[.625rem]">Maggie E. Pope</td>
                           <td class="min-w-[1.25rem]">Nov 15, 2021</td>
-                          <td class="min-w-[.625rem]">Purple</td>
-                          <td class="min-w-[.625rem]">Miestate.com</td>
+                          <td class="min-w-[.625rem]">Present</td>
+                          <td class="min-w-[.625rem]">27/30</td>
                         </tr>
                         <tr>
                           <td class="min-w-[.625rem]">3</td>
                           <td class="min-w-[.625rem]">Jarvis F. Knowles</td>
                           <td class="min-w-[1.25rem]">Nov 1, 2021</td>
-                          <td class="min-w-[.625rem]">green</td>
-                          <td class="min-w-[.625rem]">Theclick.com</td>
+                          <td class="min-w-[.625rem]">On leave</td>
+                          <td class="min-w-[.625rem]">26/30</td>
                         </tr>
                         <tr>
                           <td class="min-w-[.625rem]">4</td>
                           <td class="min-w-[.625rem]">Jennifer D. Levine</td>
                           <td class="min-w-[1.25rem]">Nov 9, 2021</td>
-                          <td class="min-w-[.625rem]">Red</td>
-                          <td class="min-w-[.625rem]">Naturepp.com</td>
+                          <td class="min-w-[.625rem]">On leave</td>
+                          <td class="min-w-[.625rem]">29/30</td>
                         </tr>
                         <tr>
                           <td class="min-w-[.625rem]">5</td>
                           <td class="min-w-[.625rem]">William C. Neilson</td>
                           <td class="min-w-[1.25rem]">Nov 9, 2021</td>
-                          <td class="min-w-[.625rem]">Yellow</td>
-                          <td class="min-w-[.625rem]">Naturepp.com</td>
+                          <td class="min-w-[.625rem]">Present</td>
+                          <td class="min-w-[.625rem]">28/30</td>
                         </tr>
                       </tbody>
                     </table>
