--- a/assets/pug/pages/template/table.pug
+++ b/assets/pug/pages/template/table.pug
@@ -1,7 +1,7 @@
 //- sidebar
 -var sidebar = true;
 
-//- feathet
+//- feather
 -var feather= true;
 
 //- customSelect
@@ -14,8 +14,8 @@
 -var prism=true;
 
 //- Breadcrumbs
--var pageTitle="Button";
--var breadcrumb=['Ui Kits','Button'];
+-var pageTitle="Tables";
+-var breadcrumb=['Ui Kits','Tables'];
 
 //- json
 include ../../data/all-data
@@ -33,16 +33,16 @@ html(lang='en')
         // Sidebar Start 
         div.page-sidebar.sidebar-dark.unique-sidebar
           include ../../layout/unique
-        // Sidebar End 
+        // Sidebar End
 
-        // Page Body Start 
+        // Page Body Start
         div.page-body
-          div.grid.grid-cols-12.gap-card-gap
+          div.grid.grid-cols-12.gap-card-gap.table-main
             div.col-span-6(class="lg:col-span-12")
               div.card  
                 div.card-header.border-b-0
                   div.flex.flex-col
-                    h3.text-lg.font-medium Default
+                    h3.text-lg.font-medium Basic Table
                 div.card-body
                   div.overflow-auto.custom-scroll  
                     include ../../components/table/default-table
